feat(supabase): supabase connect fetch data

--- a/.gitignore
+++ b/.gitignore
@@ -29,10 +29,11 @@ yarn-error.log*
 
 # local env files
 .env*.local
-
+.env
+.env.production
 # vercel
 .vercel
-
+yarn.lock
 # typescript
 *.tsbuildinfo
 next-env.d.ts
