--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@supabase/supabase-js": "^2.38.4",
     "framer-motion": "^10.16.4",
     "next": "14.0.1",
     "react": "^18",
